# rocket-flex-session

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lib.yml
.zed/: settings.json
examples/: basic.rs  redis.rs
src/: error.rs  fairing.rs  guard.rs  lib.rs  options.rs  session.rs  session_hash.rs  session_index.rs  session_inner.rs  storage.rs
src/storage/: cookie.rs  interface.rs  memory.rs  redis.rs  sqlx.rs
src/storage/redis/: base.rs  fred.rs  storage.rs  storage_indexed.rs
src/storage/sqlx/: base.rs  postgres.rs  sqlite.rs
tests/: basic.rs  expiration.rs  indexed_session.rs  indexed_storage.rs  request_guard.rs  session_data.rs  session_indexed.rs  storages.rs  storages_basic.rs  storages_indexed.rs
tests/common/: mod.rs
